XWIKI-21492: Underline inline links * Fixed spacing for hidelefthideright * Added a comment * Improved the inline link selector by extending the exceptions * Added a specific rule on the SolrSearch page

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/general.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/general.less
@@ -133,6 +133,7 @@ img {
   hyphens: auto;
 }
 
+
 // User preferences ===========================================================
 body.content {
   /* We apply various user preference related styles to the content of the page.
@@ -145,6 +146,15 @@ body.content {
   }
 
   &.preference-underlining-only-inline-links {
+    // Define an inline link mixin
+    .not-inline-link {
+      text-decoration: none;
+      // Make sure we don't take over the default behaviour on hover with too much specificity.
+      &:hover, &:focus {
+        text-decoration: underline
+      }
+    }
+
     // Main rule for the content
     #xwikicontent a {
       text-decoration: underline;
@@ -168,12 +178,20 @@ body.content {
       & .buttonwrapper,
       & #user-menu-col {
         & a {
-          text-decoration: none;
-          // Make sure we don't take over the default behaviour on hover with too much specificity.
-          &:hover, &:focus {
-            text-decoration: underline
-          }
+          .not-inline-link ();
         }
+      }
+
+      /* Remove the underlining from links with the btn class.
+       Those are already styled differently from their neighboring text. */
+      & a.btn {
+        .not-inline-link ();
+      }
+
+      // Remove the underlining from links with an icon. In the vast majority of cases, these are already spottable.
+      & a:has( img[alt=""]), // With the silk iconTheme
+      & a:has( span.fa) { // With the Font Awesome iconTheme
+        .not-inline-link ();
       }
     }
 
